--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 authors = ["Robert Schütte <schuetterobert@gmail.com>"]
 description = "Rust library for controling Z-Wave networks."
 homepage = "https://github.com/Roba1993"
-repository = "https://github.com/Roba1993"
+repository = "https://github.com/Roba1993/rzw"
 documentation = "https://github.com/Roba1993"
 license = "MIT"
 readme = "README.md"
